Projeto encaminhando para o final, quase todos metodos concluidos